Fixed warnings in projectUtil.